Using the different PT installations (docker based or standalone) for different uses (production or configuration).

--- a/ptinstances.yml
+++ b/ptinstances.yml
@@ -2,10 +2,9 @@
 
 # file: ptinstances.yml
 
-- name: Install and configure PacketTracer instance
+- name: Install and configure PacketTracer instances' manager
   hosts: pt_backend
   roles:
-#    - packetTracer_unique
     - packetTracer_multiple
   tags:
     - packetTracer
