--- a/ptonly.yml
+++ b/ptonly.yml
@@ -1,10 +1,8 @@
 ---
 
-# file: ptinstances.yml
+# file: ptonly.yml
 
 - name: Install and configure a single PacketTracer instance
   hosts: pt_backend
   roles:
     - packetTracer_unique
-  tags:
-    - packetTracer
