--- a/roles/packetTracer_unique/tasks/dependencies.yml
+++ b/roles/packetTracer_unique/tasks/dependencies.yml
@@ -1,6 +1,30 @@
 ---
 
 
+# In Ubuntu Trusty this is necessary to access to i386 packages.
+- name: Enable access to i386 architecture's packages
+  sudo: True
+  command: "dpkg --add-architecture i386"
+  when: ansible_os_family == "Debian"
+  tags:
+    - apt
+    - dpkg
+    - architecture
+    - i386
+
+
+# Needed at least the first time after creating vagrant machine.
+- name: Update packages
+  sudo: True
+  apt: update_cache=yes
+  when: ansible_os_family == "Debian"
+  environment: proxy_env
+  tags:
+    - apt
+    - update
+    - debian
+
+
 - name: Bulk dependency installation
   sudo: True
   apt:
