--- a/roles/vnc/tasks/create_passfile.yml
+++ b/roles/vnc/tasks/create_passfile.yml
@@ -36,7 +36,7 @@
 # check that the user executing it is not root.
 # In other words, check that you are not sudoing this by mistake (e.g., by defining "sudo" in any of the upper files).
 - name: "Create a VNC passwd file (WARNING: change the password before using it in a production site!)"
-  command: "{{pass_script}} {{vnc_pass}}"
+  command: "{{ pass_script }} {{ vnc_password }}"
   tags:
     - copy
     - installation
