Editing all the secret variables (for configuring VNC and Tomcat) in a single unstaged file.

--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,4 @@ target/
 
 # Files containing secrets
 # If you want to keep track of them, consider using ansible-vault.
-roles/tomcat7/vars/deployment_credentials.yml
+vars.secret.yml
