--- a/roles/tomcat7/tasks/manual_install.yml
+++ b/roles/tomcat7/tasks/manual_install.yml
@@ -49,7 +49,7 @@
     - installation
 
 
-- include_vars: deployment_credentials.yml
+- include_vars: vars.secret.yml
 - name: Set Tomcat 7 configuration
   template:
     src: tomcat-users.xml.j2
