--- a/roles/vnc/tasks/install.yml
+++ b/roles/vnc/tasks/install.yml
@@ -2,6 +2,17 @@
 
 # Check this: https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-vnc-on-ubuntu-14-04
 
+# Needed at least the first time after creating vagrant machine.
+- name: Update packages
+  sudo: True
+  apt: update_cache=yes
+  when: ansible_os_family == "Debian"
+  environment: proxy_env
+  tags:
+    - apt
+    - update
+    - debian
+
 
 - name: Install VNC server
   sudo: True
