--- a/roles/packetTracer_unique/meta/main.yml
+++ b/roles/packetTracer_unique/meta/main.yml
@@ -1,4 +1,5 @@
 ---
 
 dependencies:
-  - { role: vnc, x_display: '{{ x_server_number }}' }
+#  - { role: vnc, x_display: '{{ x_server_number }}' }
+  - { role: docker }
