Using variables for backup files names.

--- a/roles/packetTracer_unique_backup/defaults/main.yml
+++ b/roles/packetTracer_unique_backup/defaults/main.yml
@@ -2,3 +2,6 @@
 
 backup_path: "{{home_dir}}/backup"
 local_backup_path: "/tmp/backup/"
+
+compressed_installation_backup: "installation.tar.gz"
+configuration_file_backup: "packettracer.conf"
