Isolating Packet Tracer container creation into its own role.

--- a/roles/packetTracer_docker/tasks/main.yml
+++ b/roles/packetTracer_docker/tasks/main.yml
@@ -58,8 +58,9 @@
    - "docker images"
    - "docker inspect {{ docker_image }}"
    - "docker rmi {{ docker_image }}"
-   - "docker run -p 5901:5900 -t -i {{ docker_image }}"
+   - "docker run -p 5901:{{ docker_vnc_port }}  -p  39000:{{ docker_pt_port }} -ti {{ docker_image }}"
    - "docker ps  ( running containers )"
    - "docker ps -a  ( all containers )"
    - "docker start/stop/rm container_id"
+   - "docker rm $(docker ps -a -q)"
    - "docker port container_id"
