More neat use of Supervisor not to depend on bash script to run Xvfb, x11vnc and Packet Tracer.

--- a/roles/packetTracer_multiple/files/supervisord.conf
+++ b/roles/packetTracer_multiple/files/supervisord.conf
@@ -1,5 +1,38 @@
 [supervisord]
 nodaemon=true
 
-[program:startxvfb]
-command=/bin/sh startXvfb.sh
+[program:xvfb]
+priority=10
+directory=/
+command=/usr/bin/Xvfb :1 -screen 0 1024x768x16
+user=root
+autostart=true
+autorestart=true
+stopsignal=QUIT
+stdout_logfile=/var/log/xvfb.log
+stderr_logfile=/var/log/xvfb.err
+
+[program:x11vnc]
+priority=20
+directory=/
+command=x11vnc -display :1 -xkb
+user=root
+autostart=true
+autorestart=true
+stopsignal=QUIT
+stdout_logfile=/var/log/x11vnc.log
+stderr_logfile=/var/log/x11vnc.err
+
+[program:packetTracer]
+priority=20
+command=/opt/pt/bin/PacketTracer6 saves/FORGE/ibookdemo611.pkt
+user=root
+environment=DISPLAY=":1"
+directory=/opt/pt
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/packettracer.log
+stderr_logfile=/var/log/packettracer.err
+
+# Afterwards you could run other apps in this virtual display. E.g.:
+# DISPLAY=:1 firefox http://www.google.com &
