Installing Xfce in packetTracer_multiple role.

--- a/roles/packetTracer_multiple/meta/main.yml
+++ b/roles/packetTracer_multiple/meta/main.yml
@@ -2,4 +2,4 @@
 
 dependencies:
   - { role: proxy }
-  - { role: packetTracer_docker_xvfb }
+  - { role: packetTracer_docker_xvfb, install_xfce: True }
