Creating pt_installation group as a parent for pt_backend and pt_configuration ones.

--- a/ptonly.yml
+++ b/ptonly.yml
@@ -3,7 +3,7 @@
 # file: ptonly.yml
 
 - name: Install and configure a single PacketTracer instance
-  hosts: pt_backend
+  hosts: pt_configuration
   roles:
     - proxy
     - pt_configurator
