--- a/ptonly_backup.yml
+++ b/ptonly_backup.yml
@@ -3,6 +3,6 @@
 # file: ptonly_backup.yml
 
 - name: Backup and fetch PacketTracer's configuration files
-  hosts: pt_backend
+  hosts: pt_configuration
   roles:
     - pt_configurator_backup
