Overriding variable in dependency rather than in the group variable definitions.
Otherwise, if a machine is at the same time a configuration machine and a backend machine, the override will be applied to it also.

--- a/roles/pt_configurator/meta/main.yml
+++ b/roles/pt_configurator/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 
 dependencies:
-  - { role: packetTracer_docker }
+  - { role: packetTracer_docker, docker_image: "packettracer_conf" }  # Overriden!
