Making the container image lighter by not using Xfce.

--- a/roles/pt_instance_manager/meta/main.yml
+++ b/roles/pt_instance_manager/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 
 dependencies:
-  - { role: packetTracer_docker_xvfb, install_xfce: True }
+  - { role: packetTracer_docker_xvfb, install_xfce: False }
