Fixing minor issue.

--- a/roles/pt_configurator/tasks/main.yml
+++ b/roles/pt_configurator/tasks/main.yml
@@ -5,7 +5,7 @@
     src:  "{{ installation_file }}"
     dest: "{{ home_dir }}/{{ compressed_installation_file.name }}"
     owner: "{{ remote_user }}"
-    group: "{{ remote_user }}"
+    group: "{{ remote_group }}"
   tags:
     - packettracer
     - user
