Creating image without the main Packet Tracer installation folder.
This folder is uncompressed in the provisioned machine and should be mounted in the container during its creation.

--- a/roles/packetTracer_docker_xvfb/defaults/main.yml
+++ b/roles/packetTracer_docker_xvfb/defaults/main.yml
@@ -1,3 +1,8 @@
 ---
 
 install_xfce: False  # This can be override when this role is marked as a dependency.
+
+# docker image names
+docker_xvfb_base_image: "packettracer_xvfb_pre"  # PT must be either copied or mounted in this image.
+docker_xvfb_ptadd_image: "packettracer_xvfb_add"
+docker_xvfb_ptmount_image: "packettracer_xvfb_mount"
