--- a/roles/packetTracer_docker_xvfb/tasks/pt_add.yml
+++ b/roles/packetTracer_docker_xvfb/tasks/pt_add.yml
@@ -23,7 +23,7 @@
 
 - name: Add 'packettracer' tag
   when: container_build.rc != 1
-  shell: "docker tag {{ docker_xvfb_ptadd_image }} {{ docker_image }}"
+  shell: "docker tag -f {{ docker_xvfb_ptadd_image }} {{ docker_image }}"
   tags:
    - container
    - docker
