--- a/roles/packetTracer_docker_xvfb/tasks/main.yml
+++ b/roles/packetTracer_docker_xvfb/tasks/main.yml
@@ -2,20 +2,17 @@
 
 - include_vars: vars.secret.yml
 
+
+- name: Create xvfb_ptadd_context context
+  file: path="{{ xvfb_base_context }}" state=directory
+
+
 - name: Update and copy Dockerfile for PT
   template:
     src: "Dockerfile_base.j2"
-    dest: "./Dockerfile_xvfb"
+    dest: "{{ xvfb_base_context }}/Dockerfile"
   tags:
    - template
-   - copy
-   - files
-   - docker
-
-
-- name: Copy installation file
-  copy: src="{{ installation_file }}" dest="./"
-  tags:
    - copy
    - files
    - docker
@@ -24,7 +21,7 @@
 - name: Copy supervisor's configuration file
   template:
     src: "supervisord.conf.j2"
-    dest: "./supervisord.conf"
+    dest: "{{ xvfb_base_context }}/supervisord.conf"
   tags:
    - copy
    - files
@@ -34,7 +31,7 @@
 # Problem that I have not been able to solve:
 #   https://github.com/ansible/ansible-modules-core/issues/921
 - name: Build docker container automatically
-  shell: "docker build --rm -t {{ docker_xvfb_base_image }} -f Dockerfile_xvfb ./"
+  shell: "docker build --rm -t {{ docker_xvfb_base_image }} {{ xvfb_base_context }}"
   ignore_errors: True
   register: container_build
   tags:
@@ -45,17 +42,17 @@
 
 - name: Build docker container manually
   when: container_build.rc == 1
-  debug: msg="docker build --rm -t {{ docker_xvfb_base_image }} -f Dockerfile_xvfb ./"
+  debug: msg="docker build --rm -t {{ docker_xvfb_base_image }} {{ xvfb_base_context }}"
+
+
+# Mounted always as the data-only container will be of this type
+- name: Build docker container with Packet Tracer embedded
+  include: pt_add.yml
 
 
 - name: Prepare folders to be mounted in the Packet Tracer container
   include: pt_mount.yml
   when: not include_pt
-
-
-- name: Build docker container with Packet Tracer embedded
-  include: pt_add.yml
-  when: include_pt
 
 
 - name: Reminders for docker usage
